syntax = "proto3";
package anytype.storage;
option go_package = "github.com/anytypeio/go-anytype-library/pb/storage";

import "pb/model/protos/models.proto";

message BlockWithDependentBlocks {
    anytype.model.Block block = 1;
    map<string, anytype.model.Block> blockById = 2;
}
